--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Meta Tags para Redes Sociales (Open Graph) -->
     <meta property="og:title" content="DNI Scanner" />
     <meta property="og:description" content="Escanea tu DNI, guarda tus datos y accede a ellos cuando lo necesites con DNI Scanner." />
-    <meta property="og:image" content="/path/to/your/image.png" /> <!-- Coloca una imagen representativa -->
+    <meta property="og:image" content="https://i.pinimg.com/736x/1d/ec/f9/1decf93f3338ab31281d1a299027762c.jpg" /> <!-- Coloca una imagen representativa -->
     <meta property="og:url" content="https://dni-scanner.vercel.app/" /> <!-- Reemplaza con tu URL -->
     <meta property="og:type" content="website" />
 
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DNI Scanner" />
     <meta name="twitter:description" content="Escanea tu DNI, guarda tus datos y accede a ellos cuando lo necesites." />
-    <meta name="twitter:image" content="/path/to/your/image.png" /> <!-- Coloca una imagen representativa -->
+    <meta name="twitter:image" content="https://i.pinimg.com/736x/1d/ec/f9/1decf93f3338ab31281d1a299027762c.jpg" /> <!-- Coloca una imagen representativa -->
     
     <!-- Favicon para diferentes dispositivos -->
     <link rel="icon" href="/path/to/favicon.ico" sizes="32x32" />
